Upload should ensure functional grading system.

--- a/templates/instructor-dashboard.html
+++ b/templates/instructor-dashboard.html
@@ -65,7 +65,7 @@
       <!-- Nav Item - Notes -->
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('instructor_notes')}}">
-          <i class="fa fa-notepad"></i>
+          <i class="fa fa-sticky-note"></i>
           <span>Notes</span>
         </a>
       </li>
