--- a/templates/classes.html
+++ b/templates/classes.html
@@ -67,7 +67,7 @@
       <!-- Nav Item - Notes -->
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('instructor_notes')}}">
-          <i class="fa fa-notepad"></i>
+          <i class="fa fa-sticky-note"></i>
           <span>Notes</span>
         </a>
       </li>
