--- a/templates/instructor-assignments.html
+++ b/templates/instructor-assignments.html
@@ -65,7 +65,7 @@
       <!-- Nav Item - Notes -->
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('instructor_notes')}}">
-          <i class="fa fa-notepad"></i>
+          <i class="fa fa-sticky-note"></i>
           <span>Notes</span>
         </a>
       </li>
@@ -237,7 +237,7 @@
                                   <a href="{{ url_for('download_file', filename=submission.file_path.split('/')[-1]) }}" class="btn btn-sm btn-outline-info">Download</a>
                               </td>
                               <td>
-                                  <a href="#" class="btn btn-sm btn-success">Grade</a>
+                                  <a href="{{url_for('instructor_grades')}}" class="btn btn-sm btn-success">Grade</a>
                               </td>
                           </tr>
                           {% else %}
