--- a/templates/instructor-notes.html
+++ b/templates/instructor-notes.html
@@ -65,7 +65,7 @@
       <!-- Nav Item - Notes -->
       <li class="nav-item">
         <a class="nav-link active" href="{{url_for('instructor_grades')}}">
-          <i class="fa fa-notepad"></i>
+          <i class="fa fa-sticky-note"></i>
           <span>Notes</span>
         </a>
       </li>
