--- a/static/styles.css
+++ b/static/styles.css
@@ -92,6 +92,9 @@ body {
   letter-spacing: 0.05rem;
   z-index: 1;
 }
+.sidebar-brand-text {
+  color: white !important;
+}
 
 .sidebar-divider {
   border-top: 1px solid rgba(255, 255, 255, 0.15);
