--- a/templates/classes.html
+++ b/templates/classes.html
@@ -13,9 +13,9 @@
   <div class="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="sidebar">
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{url_for('instructor_dashboard')}}">
+      <a class="sidebar-header p-3" href="{{url_for('instructor_dashboard')}}">
         <div class="sidebar-brand-icon">
           <i class="fas fa-graduation-cap"></i>
         </div>
