--- a/static/SignUp_LogIn_Form.css
+++ b/static/SignUp_LogIn_Form.css
@@ -14,7 +14,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(90deg, #e2e2e2, #c9d6ff);
+    background: linear-gradient(90deg, #e2e2e2, #a984f8);
 }
 
 .container{
@@ -99,7 +99,7 @@ form{ width: 100%; }
 .btn{
     width: 100%;
     height: 48px;
-    background: #7494ec;
+    background: #6225e6; 
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     border: none;
@@ -136,7 +136,7 @@ form{ width: 100%; }
         left: -250%;
         width: 300%;
         height: 100%;
-        background: #7494ec;
+        background: #6225e6;
         /* border: 2px solid red; */
         border-radius: 150px;
         z-index: 2;
