--- a/static/globals.css
+++ b/static/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/*@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -92,3 +92,4 @@ body {
     @apply bg-background text-foreground;
   }
 }
+*/
