--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 :root {
-  --primary-color: #4e73df;
+  --primary-color: #6225e6;
   --secondary-color: #f8f9fc;
-  --accent-color: #36b9cc;
+  --accent-color: #5014d1;
   --success-color: #1cc88a;
   --warning-color: #f6c23e;
   --danger-color: #e74a3b;
@@ -11,27 +11,8 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  background-color: var(--secondary-color);
-  min-height: 100vh;
-}
-
-/* Login Page Styles */
-.login-container {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(135deg, #4e73df 0%, #36b9cc 100%);
-  padding: 20px;
-}
-.col-lg-4{
-  width: 500px;
-}
-
-.login-card {
-  border-radius: 10px;
-  border: none;
-  overflow: hidden;
+  /*background: linear-gradient(180deg, #c1aee9 10%, #e5ebff 100%);*/
+  min-height: 100vh; /* Ensures the gradient covers the entire page */
 }
 
 /* Dashboard Layout */
@@ -40,13 +21,47 @@ body {
   width: 100%;
   align-items: stretch;
 }
+/* Sidebar Header Styling */
+.sidebar-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  text-decoration: none;
+  background: linear-gradient(135deg,#4600dd, #3503a0); /* Pink-Red Gradient */
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 8px;
+  transition: all 0.3s ease-in-out;
+}
+
+/* Sidebar Brand Icon */
+.sidebar-brand-icon i {
+  font-size: 24px;
+  margin-right: 10px;
+}
+
+/* Sidebar Brand Text */
+.sidebar-brand-text {
+  font-weight: bold;
+  font-size: 22px;
+  letter-spacing: 1px;
+}
+
+/* Hover Effect */
+.sidebar-header:hover {
+  background: linear-gradient(135deg, #3503a0, #4600dd); /* Inverted Gradient */
+  transform: scale(1.05);
+  box-shadow: 0 4px 10px rgba(255, 117, 140, 0.3);
+}
 
 /* Sidebar Styles */
 .sidebar {
   min-width: 250px;
   max-width: 250px;
   min-height: 100vh;
-  background: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background: linear-gradient(180deg, #230269 10%, #496ace 100%);
   color: white;
   transition: all 0.3s;
 }
@@ -173,8 +188,8 @@ body {
 }
 
 .btn-primary:hover {
-  background-color: #2e59d9;
-  border-color: #2e59d9;
+  background-color: #330fb4;
+  border-color: #1e45bb;
 }
 
 .btn-success {
