--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -36,6 +36,12 @@
             Assignments
           </a>
         </li>
+        <li class="nav-item" >
+          <a class="nav-link " href="{{url_for('student_notes')}}">
+            <i class="fas fa-sticky-note"></i>
+            Notes
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('grades')}}">
             <i class="fas fa-chart-bar"></i>
